שינוי צבעים, יישור הכנסות, התחלת עיצוב סטורי סיימנ אוברליי של עריכת תת קטגוריה

--- a/Client/Components/EditCategoryComponent.razor
+++ b/Client/Components/EditCategoryComponent.razor
@@ -73,7 +73,7 @@
                     <div class="outerColors">
                         <div class="colorsContainer">
                             <div class="colorsRow">
-                                @foreach (var color in new[] { "#F4B367", "#7B67F4", "#F467AB", "#F47867", "#678EF4", "#85E7A0" })
+                                @foreach (var color in new[] { "#F4B367", "#AEA2F9", "#F467AB", "#F47867", "#6775F4", "#8DE4BF" })
                                 {
                                     <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
                                         <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
@@ -83,7 +83,7 @@
                                 }
                             </div>
                             <div class="colorsRow">
-                                @foreach (var color in new[] { "#67CAF4", "#FFEF9D", "#FBEBD7", "#04905E", "#F95050", "#DADADA" })
+                                @foreach (var color in new[] { "#67CAF4", "#FCE884", "#F9D3C2", "#16A78D", "#696969", "#DADADA" })
                                 {
                                     <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
                                         <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
