--- a/Client/Components/MonthlyStoryGraphComponent.razor
+++ b/Client/Components/MonthlyStoryGraphComponent.razor
@@ -111,7 +111,7 @@
                             string catColor = "";
                             if (cat.color == null || cat.color == "")
                             {
-                                catColor = convertCatColors("#6874f4"); //cornflower blue
+                                catColor = convertCatColors("#6775F4"); //cornflower blue
                             }
                             else
                             {
@@ -131,44 +131,41 @@
         string convertedColor = "";
         switch (catColor)
         {
-            case "#f4b367": //mustard
-                convertedColor = ChartColor.FromRgba(244, 179, 103, 255);
+            case "#F4B367": //mustard
+                convertedColor = ChartColor.FromRgba(244, 179, 103, 1);
                 break;
-            case "#7b67f4": //dark purple
-                convertedColor = ChartColor.FromRgba(123, 103, 244, 255);
+            case "#AEA2F9": //purple
+                convertedColor = ChartColor.FromRgba(174, 162, 249, 1);
                 break;
-            case "#f467ab": //dark pink
-                convertedColor = ChartColor.FromRgba(244, 103, 171, 255);
+            case "#F467AB": //dark pink
+                convertedColor = ChartColor.FromRgba(244, 103, 171, 1);
                 break;
-            case "#f47867": //salmon pink
-                convertedColor = ChartColor.FromRgba(244, 120, 103, 255);
+            case "#F47867": //salmon pink
+                convertedColor = ChartColor.FromRgba(244, 120, 103, 1);
                 break;
-            case "#85e7a0": //light green
-                convertedColor = ChartColor.FromRgba(133, 231, 160, 255);
+            case "#6775F4": //defualt
+                convertedColor = ChartColor.FromRgba(103, 117, 244, 1);
                 break;
-            case "#ffef9d": //banana
-                convertedColor = ChartColor.FromRgba(255, 239, 157, 255);
+            case "#8DE4BF": //light green
+                convertedColor = ChartColor.FromRgba(141, 228, 191, 1);
                 break;
-            case "#678ef4": //banana
-                convertedColor = ChartColor.FromRgba(103, 142, 244, 255);
+            case "#67CAF4": //light blue
+                convertedColor = ChartColor.FromRgba(103, 202, 244, 1);
                 break;
-            case "#67caf4": //light-blue
-                convertedColor = ChartColor.FromRgba(103, 202, 244, 255);
+            case "#FCE884": //banana
+                convertedColor = ChartColor.FromRgba(252, 232, 132, 1);
                 break;
-            case "#fbebd7": //cream
-                convertedColor = ChartColor.FromRgba(251, 235, 215, 255);
+            case "#F9D3C2": //cream
+                convertedColor = ChartColor.FromRgba(249, 211, 194, 1);
                 break;
-            case "#04905e": //dark green
-                convertedColor = ChartColor.FromRgba(4, 144, 94, 255);
+            case "#16A78D": //dark green
+                convertedColor = ChartColor.FromRgba(22, 167, 141, 1);
                 break;
-            case "#f95050": //red
-                convertedColor = ChartColor.FromRgba(249, 80, 80, 255);
+            case "#696969": //dark gray
+                convertedColor = ChartColor.FromRgba(105, 105, 105, 1);
                 break;
-            case "#dadada": //gray
-                convertedColor = ChartColor.FromRgba(218, 218, 218, 255);
-                break;
-            case "#6874f4":
-                convertedColor = ChartColor.FromRgba(104, 116, 244, 255);
+            case "#DADADA": //gray
+                convertedColor = ChartColor.FromRgba(218, 218, 218, 1);
                 break;
         };
         return convertedColor;
